# SimAI

./: FloorPlanProcessing.py  README.md
agentic_ai_simulation/: README.md  agents.txt  floorplan.json  pyproject.toml
agentic_ai_simulation/output/: report.md
agentic_ai_simulation/src/agentic_ai_simulation/: crew.py  main.py
agentic_ai_simulation/src/agentic_ai_simulation/config/: agents.yaml  tasks.yaml
