[project]
name = "agentic_ai_simulation"
version = "0.1.0"
description = "agentic-ai-simulation using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
agentic_ai_simulation = "agentic_ai_simulation.main:run"
run_crew = "agentic_ai_simulation.main:run"
train = "agentic_ai_simulation.main:train"
replay = "agentic_ai_simulation.main:replay"
test = "agentic_ai_simulation.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
